Compiler/src/main/java/Testing/Tests/LexicalTests/Fail/InvalidChar2.ru
/? Error Léxico, char inválido
'\0'